# OBPprediction

./: README.md  obp_analysis_template.ipynb  pyproject.toml  run_pipeline.py
outputs_smoke/: beta_summary.csv  model_summary.csv  modeling_dataset.csv  obp_posterior_estimates.csv  obp_trace.nc
src/obp_empirical_bayes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/obp_pipeline/: __init__.py  config.py  data.py  features.py  model.py  pipeline.py
