[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obp-empirical-bayes"
version = "0.1.0"
description = "Data pipeline and logistic-normal empirical Bayes platform for OBP prediction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pybaseball",
  "pymc",
  "pytensor",
  "pandas",
  "numpy",
  "scipy",
  "arviz",
  "requests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
